# fractal-renderer

./: CMakeLists.txt  README.md  config.txt
include/: animation.hpp  renderer.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  animation.cpp  main.cpp  renderer.cpp  shader.glsl
